# saga

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  gonk.toml  progress.py  report.json
.githooks/: pre-commit
.github/workflows/: build-linux-i686.yaml  build-target.yaml  msys2-build-target.yaml
gonk/: Cargo.toml
gonk/src/: config.rs  main.rs  split.rs
libs/: .gitignore  build-ogg-vorbis.sh
res/SavedGames/: SaveGame0.LEGO Star Wars - The Complete Saga_SavedGame  SaveGame3.LEGO Star Wars - The Complete Saga_SavedGame
src/: CMakeLists.txt  batman.cpp  decomp.h  export.h  globals.cpp  globals.h  uberShader2.array
src/deflate/: deflate.cpp  deflate.h  deflate_noopt.cpp
src/game/: area.cpp  area.h  character.cpp  character.h  cheat.cpp  collection.cpp  collection.h  episode.cpp  episode.h  gizmo.cpp  gizmo.h  level.cpp  level.h  mission.cpp  mission.h  store.cpp  store.h  timer.cpp  timer.h  world.cpp  world.h
src/game/gizmos/: ai.cpp  ai.h  attractos.cpp  attractos.h  door.cpp  door.h  edgizshadowmachine.cpp  edgizshadowmachine.h  gizaimessage.cpp  gizaimessage.h  gizbombgen.cpp  gizbombgen.h  gizbuildits.cpp  gizbuildits.h  gizforce.cpp  gizforce.h  gizmopickups.cpp  gizmopickups.h  gizobstacles.cpp  gizobstacles.h  gizpanel.cpp  gizpanel.h  gizportal.cpp  gizportal.h  gizrandom.cpp  gizrandom.h  gizspecial.cpp  gizspecial.h  giztimer.cpp  giztimer.h  giztorpmachine.cpp  giztorpmachine.h  gizturrets.cpp  gizturrets.h  grapples.cpp  grapples.h  guidelines.cpp  guidelines.h  hatmachine.cpp  hatmachine.h  (+31 more)
src/gameapi.saga/edtools/: edfile.cpp  edfile.h
src/gameapi.saga/gui/: apimenu.cpp  apimenu.h
src/gameapi/edtools/: edfile.cpp  edfile.h
src/gameapi/gui/: apimenu.cpp
src/gameframework/: saveload.cpp  saveload.h
src/gamelib/: NewTerrain.cpp  nuwind.cpp
src/gamelib/characters/: characters.cpp  characters.h
src/gamelib/crc/: crc.cpp  crc.h
src/gamelib/nuwind/: nuwind.cpp  nuwind.h
src/implode/: implode.cpp  implode.h
src/init/: init.cpp  init.hpp
src/java/: jni.h
src/legoapi/: apiobject.h  area.cpp  area.h  character.cpp  cheat.cpp  cheat.h  collection.cpp  collection.h  episode.cpp  gizmo.cpp  level.cpp  level.h  mission.cpp  mission.h  qrand.cpp  store.cpp  timer.cpp  world.cpp  world.h
src/legoapi/gizmos/: ai.cpp  ai.h  attractos.cpp  attractos.h  door.cpp  door.h  edgizshadowmachine.cpp  edgizshadowmachine.h  gizaimessage.cpp  gizaimessage.h  gizbombgen.cpp  gizbombgen.h  gizbuildits.cpp  gizbuildits.h  gizforce.cpp  gizforce.h  gizmopickups.cpp  gizmopickups.h  gizobstacles.cpp  gizobstacles.h  gizpanel.cpp  gizpanel.h  gizportal.cpp  gizportal.h  gizrandom.cpp  gizrandom.h  gizspecial.cpp  gizspecial.h  giztimer.cpp  giztimer.h  giztorpmachine.cpp  giztorpmachine.h  gizturrets.cpp  gizturrets.h  grapples.cpp  grapples.h  guidelines.cpp  guidelines.h  hatmachine.cpp  hatmachine.h  (+30 more)
src/legogame/: game.cpp  startup.cpp  target.h  target_android.cpp
src/lostandfound/: tmclient.cpp
src/nu2api.saga/nu3d/: NuRenderDevice.cpp  NuRenderDevice.h  nucamera.cpp  nucamera.h  nugscn.cpp  nugscn.h  numtl.cpp  numtl.h  nuprim.cpp  nuprim.h  nuqfnt.cpp  nuqfnt.h  nurndr.c  nurndr.cpp  nurndr.h  nushader.cpp  nushader.h  nuspline.h  nustream.cpp  nustream.h  nutex.cpp  nutex.h  nutex_android.cpp  nutex_android.h
src/nu2api.saga/nuandroid/: ios_graphics.cpp  ios_graphics.h  nuios.cpp  nuios.h
src/nu2api.saga/nucore/: NuMemoryManager.h  NuThreadManager.cpp  (+37 more)
src/saveload/: export.h  saveload.cpp  saveload.h
test/: dat_file_read.cpp  test.hpp
(+247 files in other folders)
